--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           python -m pip install flake8==6.0.0 flake8-isort==6.0.0
           python -m pip install -r ./backend/requirements.txt
 
-      - name: Lint and run tests
+      - name: Lint and run backend tests
         env:
           POSTGRES_USER: django_user
           POSTGRES_PASSWORD: django_password
@@ -73,66 +73,72 @@ jobs:
           context: ./backend/
           push: true
           tags: egor323011/taski_backend:latest
-    frontend_tests:
+
+  frontend_tests:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up nodeJS
-      # Это готовый воркфлоу для установки Node.js на раннер
-      uses: actions/setup-node@v3
-      with:
-        # Это параметр воркфлоу, указывающий нужную версию Node.js
-        node-version: 18
+      - uses: actions/checkout@v3
 
-    - name: Install dependencies
-      # Эта команда устанавливает зависимости для фронтенда
-      run: |
-        cd frontend/
-        npm ci
+      - name: Set up nodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-    - name: Test frontend
-      # Запускаем тесты
-      run: |
-        cd frontend/
-        npm run test
+      - name: Install frontend dependencies
+        run: |
+          cd frontend/
+          npm ci
+
+      - name: Test frontend
+        run: |
+          cd frontend/
+          npm run test
+
   build_frontend_and_push_to_docker_hub:
-    name: Push frontend Docker image to DockerHub
+    name: Build and push frontend image
     runs-on: ubuntu-latest
     needs: frontend_tests
+
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
+
+      - name: Build and push frontend
         uses: docker/build-push-action@v4
         with:
           context: ./frontend/
           push: true
           tags: egor323011/taski_frontend:latest
-    build_gateway_and_push_to_docker_hub:
-    name: Push gateway Docker image to DockerHub
+
+  build_gateway_and_push_to_docker_hub:
+    name: Build and push gateway image
     runs-on: ubuntu-latest
+    needs: tests
+
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
+
+      - name: Build and push gateway
         uses: docker/build-push-action@v4
         with:
           context: ./gateway/
           push: true
-          # Тут вместо username должен быть ваш логин на Docker Hub
           tags: egor323011/taski_gateway:latest
